--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,9 @@ rust-version = "1.57"
 # serde = { version = "1.0", features = ["derive"] }
 # tauri = { version = "1.0.0-rc.11", features = ["api-all"] }
 
+# PLEview dependencies
+rsc = "2.0.0"
+
 [features]
 # by default Tauri runs in production mode
 # when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
