--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,13 +12,13 @@ rust-version = "1.57"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-# tauri-build = { version = "1.0.0-rc.9", features = [] }
+tauri-build = { version = "1.0.0-rc.9", features = [] }
 
 [dependencies]
 # Tauri dependencies
-# serde_json = "1.0"
-# serde = { version = "1.0", features = ["derive"] }
-# tauri = { version = "1.0.0-rc.11", features = ["api-all"] }
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+tauri = { version = "1.0.0-rc.11", features = ["api-all"] }
 
 # PLEview dependencies
 rsc = "2.0.0"
@@ -26,7 +26,7 @@ rsc = "2.0.0"
 [features]
 # by default Tauri runs in production mode
 # when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
-# default = [ "custom-protocol" ]
+default = [ "custom-protocol" ]
 # this feature is used used for production builds where `devPath` points to the filesystem
 # DO NOT remove this
-# custom-protocol = [ "tauri/custom-protocol" ]
+custom-protocol = [ "tauri/custom-protocol" ]
