--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@blueprintjs/core": "^4.4.0",
     "@tauri-apps/api": "^1.0.0-rc.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
@@ -17,7 +18,17 @@
     "@tauri-apps/cli": "^1.0.0-rc.11",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "eslint": "^8.16.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
   }
