--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@blueprintjs/eslint-plugin": "^2.0.1",
     "@tauri-apps/cli": "^1.0.0-rc.11",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
