--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@blueprintjs/core": "^4.4.0",
     "@blueprintjs/icons": "^4.3.0",
+    "@blueprintjs/popover2": "^1.3.1",
     "@tauri-apps/api": "^1.0.0-rc.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -31,6 +32,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-unused-imports": "^2.0.0",
