--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@blueprintjs/core": "^4.4.0",
     "@blueprintjs/icons": "^4.3.0",
     "@blueprintjs/popover2": "^1.3.1",
+    "@reduxjs/toolkit": "^1.8.2",
     "@tauri-apps/api": "^1.0.0-rc.5",
     "react": "^18.0.0",
+    "react-colorful": "^5.5.1",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.2",
+    "remeda": "^0.0.35",
     "vega": "^5.22.1",
     "vega-embed": "^6.20.8",
     "vega-lite": "^5.2.0"
