--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@blueprintjs/core": "^4.4.0",
     "@blueprintjs/icons": "^4.3.0",
     "@blueprintjs/popover2": "^1.3.1",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@reduxjs/toolkit": "^1.8.2",
     "@tauri-apps/api": "^1.0.0-rc.5",
+    "nanoid": "^4.0.0",
     "react": "^18.0.0",
     "react-colorful": "^5.5.1",
     "react-dom": "^18.0.0",
+    "react-draggable": "^4.4.5",
     "react-redux": "^8.0.2",
     "remeda": "^0.0.35",
     "vega": "^5.22.1",
