--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@reduxjs/toolkit": "^1.8.2",
-    "@tauri-apps/api": "^1.0.0-rc.5",
+    "@tauri-apps/api": "^1.0.2",
     "nanoid": "^4.0.0",
     "react": "^18.0.0",
     "react-colorful": "^5.5.1",
@@ -29,7 +29,7 @@
   },
   "devDependencies": {
     "@blueprintjs/eslint-plugin": "^2.0.1",
-    "@tauri-apps/cli": "^1.0.0-rc.11",
+    "@tauri-apps/cli": "^1.0.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
