--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,13 +12,13 @@ rust-version = "1.57"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.0.0-rc.9", features = [] }
+tauri-build = { version = "1.0.3", features = [] }
 
 [dependencies]
 # Tauri dependencies
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0-rc.11", features = ["api-all"] }
+serde_json = "1.0.82"
+serde = { version = "1.0.139", features = ["derive"] }
+tauri = { version = "1.0.3", features = ["api-all"] }
 
 # PLEview dependencies
 rsc = "2.0.0"
