--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,6 +1,12 @@
 version = 1
 
 [[analyzers]]
+name = "javascript"
+
+  [analyzers.meta]
+  plugins = ["react"]
+
+[[analyzers]]
 name = "rust"
 
   [analyzers.meta]
