--- a/package.json
+++ b/package.json
@@ -16,21 +16,23 @@
     "@emotion/styled": "^11.8.1",
     "@reduxjs/toolkit": "^1.8.2",
     "@tauri-apps/api": "^1.2.0",
+    "just-merge": "^3.2.0",
     "nanoid": "^4.0.0",
+    "plotly.js": "^2.20.0",
     "react": "^18.0.0",
     "react-colorful": "^5.5.1",
     "react-dom": "^18.0.0",
     "react-draggable": "^4.4.5",
-    "react-redux": "^8.0.2",
-    "vega": "^5.22.1",
-    "vega-embed": "^6.20.8",
-    "vega-lite": "^5.2.0"
+    "react-plotly.js": "^2.6.0",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@blueprintjs/eslint-plugin": "^2.0.1",
     "@tauri-apps/cli": "^1.2.3",
+    "@types/plotly.js": "^2.12.18",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-plotly.js": "^2.6.0",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "@vitejs/plugin-react": "^1.3.0",
