--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "postinstall": "npm --prefix node_modules/plotly.js i && npm --prefix node_modules/plotly.js run custom-bundle -- --traces scatter,scattergl,heatmap"
   },
   "dependencies": {
     "@blueprintjs/core": "^4.4.0",
@@ -16,7 +17,9 @@
     "@emotion/styled": "^11.8.1",
     "@reduxjs/toolkit": "^1.8.2",
     "@tauri-apps/api": "^1.2.0",
-    "just-merge": "^3.2.0",
+    "d3-drag": "^3.0.0",
+    "d3-selection": "^3.0.0",
+    "lodash": "^4.17.21",
     "nanoid": "^4.0.0",
     "plotly.js": "^2.20.0",
     "react": "^18.0.0",
@@ -29,6 +32,9 @@
   "devDependencies": {
     "@blueprintjs/eslint-plugin": "^2.0.1",
     "@tauri-apps/cli": "^1.2.3",
+    "@types/d3-drag": "^3.0.2",
+    "@types/d3-selection": "^3.0.5",
+    "@types/lodash": "^4.14.192",
     "@types/plotly.js": "^2.12.18",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -46,6 +52,6 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "typescript": "^4.6.3",
-    "vite": "^2.9.9"
+    "vite": "^4.2.1"
   }
 }
