--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,11 +22,13 @@ tauri = { version = "1.2.1", features = ["api-all"] }
 
 # PLEview dependencies
 rsc = "2.0.0"
+log = "0.4.17"
+tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
 
 [features]
 # by default Tauri runs in production mode
 # when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
-default = [ "custom-protocol" ]
+default = ["custom-protocol"]
 # this feature is used used for production builds where `devPath` points to the filesystem
 # DO NOT remove this
-custom-protocol = [ "tauri/custom-protocol" ]
+custom-protocol = ["tauri/custom-protocol"]
